# geode-uri

./: CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: multi-platform.yml  post-geode.yml  test.yaml
handler-mac/: CMakeLists.txt  Icon.icns  Info.plist
handler-mac/src/: main.mm
handler-win/: CMakeLists.txt  generate_header.ps1  test.h
handler-win/src/: main.cpp
include/: GeodeURI.hpp
src/: GeodeURI.cpp  main.cpp  platform.cpp
